# Library_catalog

./: .env  .gitignore  .pre-commit-config.yaml  README.MD  alembic.ini  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 4d8fc5469683_init_books.py
src/: bookManager.py  book_manager.py  db_manager.py  json_manager.py  jsonbin_repository.py  main.py  models.py  safeData.py
src/Core/: config.py  logging_service.py
src/api/: books_router.py  dependencies.py
src/api/routers/: books_router.py
src/api/schemas/: book.py  repo.py
src/core/: config.py  database.py  decorators.py  exceptions.py  logging_service.py
src/data/repositories/: base_repository.py  db_repository.py  json_repository.py  jsonbin_repository.py
src/dependencies/: dependencies.py
src/domain/managers/: book_manager.py  enrichment_manager.py
src/domain/services/: book_service.py
src/integrations/: base_api_client.py  openlibrary_api.py
src/managers/: book_manager.py  enrichment_manager.py
src/models/: book_model.py  books_orm.py  repo_model.py
src/repositories/: base_repository.py  db_repository.py  json_repository.py  jsonbin_repository.py
src/services/: book_service.py
